welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: '(' expected but identifier found.
def hunt() {while (!estSurBiscuit) {if (isFacingTail()) {avance()} else {gauche();if isFacingTail() {avance()} else {gauche();gauche();avance()}}}
                                                                                     ^SlugHunting:2: error: illegal start of simple expression
def hunt() {while (!estSurBiscuit) {if (isFacingTail()) {avance()} else {gauche();if isFacingTail() {avance()} else {gauche();gauche();avance()}}}
                                                                                                                                                ^